--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			xhr.open('POST', 'https://mailsac.com/api/email', true);
 			xhr.setRequestHeader('Content-Type', 'application/json');
 			xhr.send(JSON.stringify({
-				to: 'event@mailsac.com',
+				to: 'events@mailsac.com',
 				subject: 'Ritiro del consenso per la casa',
 				body: 'Grazie, confermiamo la ritira del consenso per la casa'
 			}));
