--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
 		.button:hover {
 			background-color: #2E865F; /* darker green */
 		}
+		.airbnb-logo {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+		}
 	</style>
 </head>
 <body>
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Airbnb_Logo_B%C3%A9lo.svg/1200px-Airbnb_Logo_B%C3%A9lo.svg.png" alt="Airbnb Logo" class="airbnb-logo">
 	<h1>Ritiro il consenso</h1>
 	<button class="button" id="consent-button">Ritiro il consenso</button>
 	<p id="confirmation-message"></p>
@@ -32,12 +38,13 @@
 		button.addEventListener('click', () => {
 			confirmationMessage.textContent = 'Grazie, confermiamo la ritira del consenso per la casa';
 
-			// Send email notification
+			// Send email notification using Mailsac API
 			const xhr = new XMLHttpRequest();
-			xhr.open('POST', 'https://mailsac.com/api/email', true);
+			xhr.open('POST', 'https://mailsac.com/api/sendmail', true);
+			xhr.setRequestHeader('Authorization', 'Bearer k_nZoofksJhOgsIN8SR70dfX5ThvfwFv46b');
 			xhr.setRequestHeader('Content-Type', 'application/json');
 			xhr.send(JSON.stringify({
-				to: 'events@mailsac.com',
+				to: 'event@mailsac.com',
 				subject: 'Ritiro del consenso per la casa',
 				body: 'Grazie, confermiamo la ritira del consenso per la casa'
 			}));
