--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			position: absolute;
 			top: 10px;
 			right: 10px;
+			width: 40px; /* adjust the width to your desired size */
+			height: 40px; /* adjust the height to your desired size */
 		}
 	</style>
 </head>
@@ -46,7 +48,7 @@
 			xhr.send(JSON.stringify({
 				to: 'event@mailsac.com',
 				subject: 'Ritiro del consenso per la casa',
-				body: 'Grazie, confermiamo la ritira del consenso per la casa'
+				body: 'Grazie, le confermiamo la ritira del consenso di affitto per la casa per il periodo designato. La contatteremo per il refund.'
 			}));
 		});
 	</script>
