--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			position: absolute;
 			top: 10px;
 			right: 10px;
-			width: 40px; /* adjust the width to your desired size */
-			height: 40px; /* adjust the height to your desired size */
+			width: 80px; /* adjust the width to your desired size */
+			height: 80px; /* adjust the height to your desired size */
 		}
 	</style>
 </head>
@@ -46,7 +46,7 @@
 			xhr.setRequestHeader('Authorization', 'Bearer k_nZoofksJhOgsIN8SR70dfX5ThvfwFv46b');
 			xhr.setRequestHeader('Content-Type', 'application/json');
 			xhr.send(JSON.stringify({
-				to: 'event@mailsac.com',
+				to: 'events@mailsac.com',
 				subject: 'Ritiro del consenso per la casa',
 				body: 'Grazie, le confermiamo la ritira del consenso di affitto per la casa per il periodo designato. La contatteremo per il refund.'
 			}));
